Improve formatting comments in v2.0 blog post

--- a/website/blog/2020-03-21-2.0.0.md
+++ b/website/blog/2020-03-21-2.0.0.md
@@ -18,7 +18,7 @@ Previously, any method call chain of length three or longer would be automatical
 
 <!-- prettier-ignore -->
 ```javascript
-// Output (Prettier stable)
+// Prettier 1.19
 if (
   foo
     .one()
@@ -32,7 +32,7 @@ if (
   // ...
 }
 
-// Output (Prettier master)
+// Prettier 2.0
 if (foo.one().two().three() === bar.four().five().six()) {
   // ...
 }
@@ -53,10 +53,10 @@ const nestedAssertions = /** @type {MyType} */
   (/** @type {unknown} */
       (x));
 
-// Prettier stable
+// Prettier 1.19
 const nestedAssertions /** @type {MyType} */ /** @type {unknown} */ = x;
 
-// Prettier master
+// Prettier 2.0
 const nestedAssertions = /** @type {MyType} */ (/** @type {unknown} */ (x));
 ```
 
@@ -131,10 +131,10 @@ In version 2.0, this behavior has become the default.
 // Input
 const fn = (x) => y => x + y;
 
-// Prettier stable
+// Prettier 1.19
 const fn = x => y => x + y;
 
-// Prettier master
+// Prettier 2.0
 const fn = (x) => (y) => x + y;
 ```
 
@@ -189,7 +189,7 @@ Previously, a space would be added after the `function` keyword in function decl
 
 <!-- prettier-ignore -->
 ```ts
-// Prettier stable
+// Prettier 1.19
 const identity = function(value) {
   return value;
 };
@@ -199,7 +199,7 @@ function identity(value) {
 const f = function<T>(value: T) {};
 const g = function*() {};
 
-// Prettier master
+// Prettier 2.0
 const identity = function (value) {
   return value;
 };
@@ -219,15 +219,15 @@ loop1:
 //test
 const i = 3;
 
-// Prettier stable (first output)
+// Prettier 1.19 (first output)
 loop1: //test
 const i = 3;
 
-// Prettier stable (second output)
+// Prettier 1.19 (second output)
 //test
 loop1: const i = 3;
 
-// Prettier master (first output)
+// Prettier 2.0 (first and second outputs)
 //test
 loop1: const i = 3;
 ```
@@ -241,7 +241,7 @@ loop1: const i = 3;
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${foo | bar}`;
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${(foo, bar)}`;
 
-// Prettier stable
+// Prettier 1.19
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${foo ||
   bar}`;
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${foo |
@@ -249,7 +249,7 @@ loop1: const i = 3;
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${(foo,
 bar)}`;
 
-// Prettier master
+// Prettier 2.0
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${
   foo || bar
 }`;
@@ -270,18 +270,18 @@ const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   (askTrovenaBeenaDependsRowans === 2 || glimseGlyphsHazardNoopsTieTie === 3);
 
-// Prettier stable (first output)
+// Prettier 1.19 (first output)
 const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   askTrovenaBeenaDependsRowans === 2 || glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier stable (second output)
+// Prettier 1.19 (second output)
 const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   askTrovenaBeenaDependsRowans === 2 ||
   glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier master (first and second outputs)
+// Prettier 2.0 (first and second outputs)
 const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   askTrovenaBeenaDependsRowans === 2 ||
@@ -297,14 +297,14 @@ function foo() {
   throw this.hasPlugin("dynamicImports") && this.lookahead().type === tt.parenLeft.right;
 }
 
-// Prettier stable
+// Prettier 1.19
 function foo() {
   throw this.hasPlugin("dynamicImports") &&
     this.lookahead().type === tt.parenLeft.right;
 }
 
 
-// Prettier master
+// Prettier 2.0
 function foo() {
   throw (
     this.hasPlugin("dynamicImports") &&
@@ -322,14 +322,14 @@ const foo = (number % 10 >= 2 && (number % 100 < 10 || number % 100 >= 20) ?
 kochabCooieGameOnOboleUnweave : annularCooeedSplicesWalksWayWay)
 ? anodyneCondosMalateOverateRetinol : averredBathersBoxroomBuggyNurl;
 
-// Prettier stable
+// Prettier 1.19
 const foo = (number % 10 >= 2 && (number % 100 < 10 || number % 100 >= 20)
 ? kochabCooieGameOnOboleUnweave
 : annularCooeedSplicesWalksWayWay)
   ? anodyneCondosMalateOverateRetinol
   : averredBathersBoxroomBuggyNurl;
 
-// Prettier master
+// Prettier 2.0
 const foo = (
   number % 10 >= 2 && (number % 100 < 10 || number % 100 >= 20)
     ? kochabCooieGameOnOboleUnweave
@@ -355,7 +355,7 @@ export class Item {
   thing!: Thing;
 }
 
-// Output (Prettier stable)
+// Prettier 1.19
 export class Item {
   @OneToOne(
     () => Thing,
@@ -364,7 +364,7 @@ export class Item {
   thing!: Thing;
 }
 
-// Output (Prettier master)
+// Prettier 2.0
 export class Item {
   @OneToOne(() => Thing, x => x.item)
   thing!: Thing;
@@ -379,10 +379,10 @@ export class Item {
 return // comment
 ;
 
-// Prettier stable
+// Prettier 1.19
 return // comment;
 
-// Prettier master
+// Prettier 2.0
 return; // comment
 ```
 
@@ -397,7 +397,7 @@ This doesn't happen anymore unless `--html-whitespace-sensitivity ignore` option
 html`<div>`;
 html`  <span>TEXT</span>  `;
 
-// Prettier stable
+// Prettier 1.19
 html`
   <div></div>
 `;
@@ -405,7 +405,7 @@ html`
   <span>TEXT</span>
 `;
 
-// Prettier master
+// Prettier 2.0
 html`<div></div>`;
 html` <span>TEXT</span> `;
 ```
@@ -419,12 +419,12 @@ function* f() {
   yield <div>generator</div>;
 }
 
-// Prettier stable
+// Prettier 1.19
 function* f() {
   yield (<div>generator</div>);
 }
 
-// Prettier master
+// Prettier 2.0
 function* f() {
   yield <div>generator</div>;
 }
@@ -439,10 +439,10 @@ Omitting these parentheses makes the code invalid.
 // Input
 export default (1, 2);
 
-// Prettier stable
+// Prettier 1.19
 export default 1, 2;
 
-// Prettier master
+// Prettier 2.0
 export default (1, 2);
 ```
 
@@ -454,11 +454,11 @@ export default (1, 2);
 (foo?.bar)();
 new (foo?.bar)();
 
-// Prettier stable
+// Prettier 1.19
 foo?.bar();
 new foo?.bar();
 
-// Prettier master
+// Prettier 2.0
 (foo?.bar)();
 new (foo?.bar)();
 ```
@@ -475,7 +475,7 @@ undefined
 foo ? <span>loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong jsx</span> :
 null
 
-// Prettier stable
+// Prettier 1.19
 foo ? (
   <span>
     loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong jsx
@@ -489,7 +489,7 @@ foo ? (
   </span>
 ) : null;
 
-// Prettier master
+// Prettier 2.0
 foo ? (
   <span>
     loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong jsx
@@ -510,10 +510,10 @@ foo ? (
 const foo = /* comments */
   bar;
 
-// Prettier stable
+// Prettier 1.19
 const foo /* comments */ = bar;
 
-// Prettier master
+// Prettier 2.0
 const foo = /* comments */ bar;
 ```
 
@@ -534,13 +534,13 @@ export const getVehicleDescriptor = async (
   Collections.Parts.PrintedCircuitBoardAssembly["attributes"] & undefined
 > => {};
 
-// Prettier stable
+// Prettier 1.19
 export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<Collections.Parts.PrintedCircuitBoardAssembly["attributes"] &
   undefined> => {};
 
-// Prettier master
+// Prettier 2.0
 export const getVehicleDescriptor = async (
   vehicleId: string
 ): Promise<
@@ -557,10 +557,10 @@ Another fix related to error recovery. Should come in handy to those who migrate
 // Input
 function fromFlow(arg: ?Maybe) {}
 
-// Prettier stable
+// Prettier 1.19
 Error: unknown type: "TSJSDocNullableType"
 
-// Prettier master
+// Prettier 2.0
 function fromFlow(arg: ?Maybe) {}
 ```
 
@@ -581,7 +581,7 @@ type ValidateArgs = [
 	...string[],
 ];
 
-// Prettier stable
+// Prettier 1.19
 type ValidateArgs = [
   {
     [key: string]: any;
@@ -590,7 +590,7 @@ type ValidateArgs = [
   ...string[],
 ];
 
-// Prettier master
+// Prettier 2.0
 type ValidateArgs = [
   {
     [key: string]: any;
@@ -614,7 +614,7 @@ const foo = () => {
 // foo
 ;[1,2,3].forEach(bar)
 
-// Prettier stable
+// Prettier 1.19
 const foo = () => {
     return;
   };
@@ -622,7 +622,7 @@ const foo = () => {
   // foo
 [1, 2, 3].forEach(bar);
 
-// Prettier master
+// Prettier 2.0
 const foo = () => {
   return;
 };
@@ -641,13 +641,13 @@ type f1 = (
   // TODO this is a very very very very long comment that makes it go > 80 columns
 ) => number;
 
-// Prettier stable
+// Prettier 1.19
 type f1 = (currentRequest: {
   a: number;
 }) => // TODO this is a very very very very long comment that makes it go > 80 columns
 number;
 
-// Prettier master
+// Prettier 2.0
 type f1 = (
   currentRequest: { a: number }
   // TODO this is a very very very very long comment that makes it go > 80 columns
@@ -675,7 +675,7 @@ type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void
 let foo9: new /* foo */ (/* bar */) /* baz */ => string;
 let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;
 
-// Prettier stable
+// Prettier 1.19
 interface foo1 {
   bar1 /* foo */ /* baz */(); // bat
   bar2 /* foo */ /* bar */ /* baz */ /* bat */?();
@@ -692,7 +692,7 @@ type foo8 = /* foo */ (a: /* bar */ string) => /* baz */ void;
 let foo9: new () => /* foo */ /* bar */ /* baz */ string;
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 
-// Prettier master
+// Prettier 2.0
 interface foo1 {
   bar1 /* foo */(/* baz */); // bat
   bar2 /* foo */ /* bar */?(/* baz */) /* bat */;
@@ -718,10 +718,10 @@ abstract class Test {
   abstract foo13 /* foo */ (/* bar */) /* baz */
 }
 
-// Prettier stable
+// Prettier 1.19
 Error: Comment "foo" was not printed. Please report this error!
 
-// Prettier master
+// Prettier 2.0
 abstract class Test {
   abstract foo12 /* foo */(a: /* bar */ string): /* baz */ void;
   abstract foo13 /* foo */(/* bar */); /* baz */
@@ -735,10 +735,10 @@ abstract class Test {
 // Input
 type A = { [key in B] };
 
-// Prettier stable
+// Prettier 1.19
 type A = { [key in B]: };
 
-// Prettier master
+// Prettier 2.0
 type A = { [key in B] };
 ```
 
@@ -750,13 +750,13 @@ Even though index signatures without type annotations or with multiple parameter
 ```ts
 // Input
 type A = { [key: string] };
-type B = { [a: string, b: string]: string; };  
+type B = { [a: string, b: string]: string; };
 
-// Prettier stable
+// Prettier 1.19
 type A = { [key: string]:  };
 type B = { [a: stringb: string]: string };
 
-// Prettier master
+// Prettier 2.0
 type A = { [key: string] };
 type B = { [a: string, b: string]: string };
 ```
@@ -768,10 +768,10 @@ type B = { [a: string, b: string]: string };
 // Input
 const a: T</* comment */> = 1;
 
-// Prettier stable
+// Prettier 1.19
 Error: Comment "comment" was not printed. Please report this error!
 
-// Prettier master
+// Prettier 2.0
 const a: T</* comment */> = 1;
 ```
 
@@ -789,7 +789,7 @@ const x: symbol = Symbol();
 // Prettier after updating Flow, but without this fix
 Error: unknown type: "SymbolTypeAnnotation"
 
-// Prettier master
+// Prettier 2.0
 const x: symbol = Symbol();
 ```
 
@@ -809,10 +809,10 @@ class Foo {
   method2() {}
 }
 
-// Prettier stable
+// Prettier 1.19
 SyntaxError: Unexpected token `@`, expected the token `class` (2:1)
 
-// Prettier master
+// Prettier 2.0
 /* @flow */
 @decorator4
 class Foo {
@@ -834,12 +834,12 @@ class Foo {
   #privateProp: number;
 }
 
-// Prettier stable
+// Prettier 1.19
 class Foo {
   privateProp: number;
 }
 
-// Prettier master
+// Prettier 2.0
 class Foo {
   #privateProp: number;
 }
@@ -859,11 +859,11 @@ Prettier now always preserves original casing.
 Label {
 }
 
-/* Prettier stable */
+/* Prettier 1.19 */
 label {
 }
 
-/* Prettier master */
+/* Prettier 2.0 */
 Label {
 }
 ```
@@ -882,7 +882,7 @@ $my-map: (
   'bar': 2, // Comment
 );
 
-// Prettier stable
+// Prettier 1.19
 $my-map: (
   "foo": 1,
   // Comment
@@ -890,7 +890,7 @@ $my-map: (
   // Comment,
 );
 
-// Prettier master
+// Prettier 2.0
 $my-map: (
   "foo": 1,
   // Comment
@@ -908,12 +908,12 @@ a {
   background-image: url($test-path + 'static/test.jpg');
 }
 
-// Prettier stable
+// Prettier 1.19
 a {
   background-image: url($test-path+"static/test.jpg");
 }
 
-// Prettier master
+// Prettier 2.0
 a {
   background-image: url($test-path + "static/test.jpg");
 }
@@ -940,14 +940,14 @@ a {
     <!-- TEST -->
   </pre></details>
 
-<!-- Output (Prettier stable) -->
+<!-- Prettier 1.19 -->
 <details>
   <pre>
     <!-- TEST -->
   </pre></details</details
 >
 
-<!-- Output (Prettier master) -->
+<!-- Prettier 2.0 -->
 <details>
   <pre>
     <!-- TEST -->
@@ -973,7 +973,7 @@ e-wrap </textarea>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 </with:colon>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <with:colon>
   <div>
     looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
@@ -989,7 +989,7 @@ e-wrap </textarea>
   ><span> inline </span>
 </with:colon>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <with:colon>
   <div>
     looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block
@@ -1023,10 +1023,10 @@ e-wrap </textarea
 <div><span>
 <
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 TypeError: Cannot read property 'start' of null
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <div><span> < </span></div>
 ```
 
@@ -1041,10 +1041,10 @@ srcset="
              /media/examples/surfer-240-200.jpg
 ">
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 Error: Mixed descriptor in srcset is not supported
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <img srcset="/media/examples/surfer-240-200.jpg" />
 ```
 
@@ -1056,10 +1056,10 @@ Error: Mixed descriptor in srcset is not supported
 <pre><br></pre>
 <pre><hr></pre>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 TypeError: Cannot read property 'start' of null
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <pre><br /></pre>
 <pre><hr /></pre>
 ```
@@ -1073,14 +1073,14 @@ TypeError: Cannot read property 'start' of null
 <span><span><input type="checkbox"/></span></span>
 <span><input type="checkbox"/></span>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <span><input type="checkbox" /> </span>
 <span
   ><span><input type="checkbox"/></span
 ></span>
 <span><input type="checkbox"/></span>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <span><input type="checkbox" /> </span>
 <span
   ><span><input type="checkbox" /></span
@@ -1097,14 +1097,14 @@ TypeError: Cannot read property 'start' of null
 </tr>
 </table><div>Should not insert empty line before this div</div>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <table>
   <tr></tr>
 </table>
 
 <div>Should not insert empty line before this div</div>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <table>
   <tr></tr>
 </table>
@@ -1124,7 +1124,7 @@ even can not fit one line
 really a lot and lot of classes
 "></div>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <div
   class="  foo
 bar baz"
@@ -1137,7 +1137,7 @@ really a lot and lot of classes
 "
 ></div>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <div class="foo bar baz"></div>
 <div
   class="another element with so many classes even can not fit one line really a lot and lot of classes"
@@ -1161,7 +1161,7 @@ really a lot and lot of classes
     bottom: 0; ">
   </div>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <div
   style="   color : red;
             display    :inline "
@@ -1177,7 +1177,7 @@ really a lot and lot of classes
 ></div>
 
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <div style="color: red; display: inline;"></div>
 <div
   style="
@@ -1203,12 +1203,12 @@ Previously, it worked only for tags. Useful for protecting various macros and pr
 <!-- prettier-ignore -->
 A super long string that has been marked as ignore because it was probably generated by some script.
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <!-- prettier-ignore -->
 A super long string that has been marked as ignore because it was probably
 generated by some script.
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <!-- prettier-ignore -->
 A super long string that has been marked as ignore because it was probably generated by some script.
 ```
@@ -1221,13 +1221,13 @@ A super long string that has been marked as ignore because it was probably gener
 | ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
 |    1 |    1 |       0 |    0 |    1 |    1 |         5 |        16 |    4 |      0 |
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <!-- prettier-ignore -->
 | Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats |
 Tigers | | ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- |
 ---- | ------ | | 1 | 1 | 0 | 0 | 1 | 1 | 5 | 16 | 4 | 0 |
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <!-- prettier-ignore -->
 | Dogs | Cats | Weasels | Bats | Pigs | Mice | Hedgehogs | Capybaras | Rats | Tigers |
 | ---- | ---- | ------- | ---- | ---- | ---- | --------- | --------- | ---- | ------ |
@@ -1255,7 +1255,7 @@ export default {
 }
 </script>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <script lang="jsx">
 export default {
   data: () => ({
@@ -1270,7 +1270,7 @@ export default {
 }
 </script>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <script lang="jsx">
 export default {
   data: () => ({
@@ -1294,7 +1294,7 @@ export default {
   :attr2="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'"/>
 </template>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <template>
   <MyComponent
     :attr1="
@@ -1306,7 +1306,7 @@ export default {
   />
 </template>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <template>
   <MyComponent
     :attr1="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`"
@@ -1333,7 +1333,7 @@ long_long_long_long_long_long_long_condition_4
 />
 </template>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <template>
   <MyComponent
     v-if="
@@ -1349,7 +1349,7 @@ long_long_long_long_long_long_long_condition_4
   />
 </template>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <template>
   <MyComponent
     v-if="
@@ -1378,10 +1378,10 @@ While there are some syntax incompatibilities (one-time bindings and the precede
 <!-- Input -->
 <div ng-if="$ctrl .shouldShowWarning&&!$ctrl.loading  ">Warning!</div>
 
-<!-- Output (Prettier stable) -->
+<!-- Prettier 1.19 -->
 <div ng-if="$ctrl .shouldShowWarning&&!$ctrl.loading  ">Warning!</div>
 
-<!-- Output (Prettier master) -->
+<!-- Prettier 2.0 -->
 <div ng-if="$ctrl.shouldShowWarning && !$ctrl.loading">Warning!</div>
 ```
 
@@ -1397,7 +1397,7 @@ broke [custom ids](https://angular.io/guide/i18n#set-a-custom-id-for-persistence
 <div i18n-prop="Special-property|This is a special property with much important information@@MyTextId"
 prop="My Text"></div>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 <div
   i18n-prop="
     Special-property|This is a special property with much important
@@ -1406,7 +1406,7 @@ prop="My Text"></div>
   prop="My Text"
 ></div>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 <div
   i18n-prop="
     Special-property|This is a special property with much important
@@ -1421,10 +1421,10 @@ prop="My Text"></div>
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 <a href="a-very-long-href-from-a-third-party-marketing-platform{{id}}longer-than-eighty-chars">Link</a>
 
-{{!-- Prettier stable --}}
+{{!-- Prettier 1.19 --}}
 <a
   href="a-very-long-href-from-a-third-party-marketing-platform
     {{id}}
@@ -1433,7 +1433,7 @@ prop="My Text"></div>
   Link
 </a>
 
-{{!-- Prettier master --}}
+{{!-- Prettier 2.0 --}}
 <a
   href="a-very-long-href-from-a-third-party-marketing-platform{{id}}longer-than-eighty-chars"
 >
@@ -1444,12 +1444,12 @@ prop="My Text"></div>
 and
 
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 <div class="hello {{if goodbye true}} {{if goodbye false}} {{if goodbye true}} {{if goodbye false}} {{if goodbye true}}">
   Hello
 </div>
 
-{{!-- Prettier stable --}}
+{{!-- Prettier 1.19 --}}
 <div
   class="hello
     {{if goodbye true}}
@@ -1465,7 +1465,7 @@ and
   Hello
 </div>
 
-{{!-- Prettier master --}}
+{{!-- Prettier 2.0 --}}
 <div
   class="hello {{if goodbye true}} {{if goodbye false}} {{if goodbye true}} {{if
       goodbye
@@ -1480,16 +1480,16 @@ and
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 <GlimmerComponent @progress={{aPropertyEndingAfterEightiethColumnToHighlightAWeirdClosingParenIssue}} />
 
-{{!-- stable --}}
+{{!-- Prettier 1.19 --}}
 <GlimmerComponent
   @progress={{aPropertyEndingAfterEightiethColumnToHighlightAWeirdClosingParenIssue
   }}
 />
 
-{{!-- master --}}
+{{!-- Prettier 2.0 --}}
 <GlimmerComponent
   @progress={{aPropertyEndingAfterEightiethColumnToHighlightAWeirdClosingParenIssue}}
 />
@@ -1499,16 +1499,16 @@ and
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 <p>Hi here is your name, as it will be displayed  {{firstName}}  {{lastName}}   , welcome!</p>
 
-{{!-- stable --}}
+{{!-- Prettier 1.19 --}}
 <p>
   Hi here is your name, as it will be displayed {{firstName}} {{lastName
   }} , welcome!
 </p>
 
-{{!-- master --}}
+{{!-- Prettier 2.0 --}}
 <p>
   Hi here is your name, as it will be displayed {{firstName}} {{
     lastName
@@ -1520,7 +1520,7 @@ and
 
 <!-- prettier-ignore -->
 ```hbs
-{{! Input}}
+{{! Input }}
 {{! prettier-ignore }}
 <div>
   "hello! my parent was ignored"
@@ -1536,7 +1536,7 @@ and
   <ThisWillBeNormal backTo    =   "normal" />
 {{/a-normal-component}}
 
-{{! Prettier stable}}
+{{! Prettier 1.19 }}
 {{! prettier-ignore }}
 <div>
   "hello! my parent was ignored"
@@ -1549,7 +1549,7 @@ and
   <ThisWillBeNormal backTo="normal" />
 {{/a-normal-component}}
 
-{{! Prettier master}}
+{{! Prettier 2.0 }}
 {{! prettier-ignore }}
 <div>
   "hello! my parent was ignored"
@@ -1575,12 +1575,12 @@ and
   {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
 </script>
 
-<!-- Output (Prettier stable) -->
+<!-- Prettier 1.19 -->
 <script type="text/x-handlebars-template">
   {{component arg1='hey' arg2=(helper this.arg7 this.arg4) arg3=anotherone arg6=this.arg8}}
 </script>
 
-<!-- Output (Prettier master) -->
+<!-- Prettier 2.0 -->
 <script type="text/x-handlebars-template">
   {{component
     arg1='hey'
@@ -1595,15 +1595,15 @@ and
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 <ul class="abc
        def">
 </ul>
 
-{{!-- Prettier stable --}}
+{{!-- Prettier 1.19 --}}
 <ul class></ul>
 
-{{!-- Prettier master --}}
+{{!-- Prettier 2.0 --}}
 <ul class="abc
        def">
 </ul>
@@ -1613,21 +1613,21 @@ and
 
 <!-- prettier-ignore -->
 ```hbs
-{{!-- input --}}
+{{!-- Input --}}
 {{~#if bar}}
   if1
 {{~else~}}
   else
 {{~/if~}}
 
-{{!-- stable --}}
+{{!-- Prettier 1.19 --}}
 {{#if bar}}
   if1
 {{else}}
   else
 {{/if}}
 
-{{!-- master --}}
+{{!-- Prettier 2.0 --}}
 {{~#if bar}}
   if1
 {{~else~}}
@@ -1645,14 +1645,14 @@ Even though using a comma to separate multiple implemented interfaces is depreca
 ```graphql
 # Input
 type Type1 implements A, B
-# { &  <-- Removing this comment changes the separator in stable
+# { &  <-- Removing this comment changes the separator in 1.19
 {a: a}
 
 type Type2 implements A, B & C{a: a}
 
-# Prettier stable
+# Prettier 1.19
 type Type1 implements A & B {
-  # { &  <-- Removing this comment changes the separator in stable
+  # { &  <-- Removing this comment changes the separator in 1.19
   a: a
 }
 
@@ -1660,9 +1660,9 @@ type Type2 implements A & B & C {
   a: a
 }
 
-# Prettier master
+# Prettier 2.0
 type Type1 implements A, B {
-  # { &  <-- Removing this comment changes the separator in stable
+  # { &  <-- Removing this comment changes the separator in 1.19
   a: a
 }
 
@@ -1682,12 +1682,12 @@ type Type2 implements A, B & C {
 1. List
 2. List
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 0. List
 1. List
 1. List
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 0. List
 1. List
 2. List
@@ -1722,7 +1722,7 @@ type Type2 implements A, B & C {
    d  
     e
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 - a  
    b  
    c  
@@ -1747,7 +1747,7 @@ type Type2 implements A, B & C {
     d  
     e
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 - a  
   b  
   c  
@@ -1792,7 +1792,7 @@ Previously, when Prettier formatted an HTML tag placed just after a list item, i
 - A list item
   <blockquote>asdf</blockquote>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 - A list item.
 
   <details><summary>Summary</summary>
@@ -1806,7 +1806,7 @@ Previously, when Prettier formatted an HTML tag placed just after a list item, i
 - A list item
   <blockquote>asdf</blockquote>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 - A list item.
 <details><summary>Summary</summary>
 <p>
@@ -1831,7 +1831,7 @@ Here's a statement[^footnote].
     Here's a multi-line footnote walking back the above statement, and showing
     how it's all totally bollocks.
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 Here's a statement[^footnote].
 
 [^footnote]:
@@ -1839,7 +1839,7 @@ Here's a statement[^footnote].
   Here's a multi-line footnote walking back the above statement, and showing
   how it's all totally bollocks.
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 Here's a statement[^footnote].
 
 [^footnote]:
@@ -1858,12 +1858,12 @@ Here's a statement[^footnote].
     test   <World        />   test
 </>       123
 
-<!-- Output (Prettier stable) -->
+<!-- Prettier 1.19 -->
 <>
 test <World        /> test
 </> 123
 
-<!-- Output (Prettier master) -->
+<!-- Prettier 2.0 -->
 <>
   test <World /> test
 </> 123
@@ -1888,12 +1888,12 @@ parsable as HTML, such as `<Tag value={{a: 'b'}}>test</Tag>`
             </div>
 </Foo>
 
-<!-- Prettier stable -->
+<!-- Prettier 1.19 -->
 
 SyntaxError: Unexpected closing tag "Tag". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (1:35)
 > 1 | <Tag  value={ {a :  'b'   } }>test</ Tag>
 
-<!-- Prettier master -->
+<!-- Prettier 2.0 -->
 
 <Tag value={{ a: "b" }}>test</Tag>
 
@@ -1912,11 +1912,11 @@ SyntaxError: Unexpected closing tag "Tag". It may happen when the tag has alread
 #### Support file extensions `.cjs` and `.yaml.sed` ([#7210](https://github.com/prettier/prettier/pull/7210) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 ```sh
-# Prettier stable
+# Prettier 1.19
 $ prettier test.cjs
 test.cjs[error] No parser could be inferred for file: test.cjs
 
-# Prettier master
+# Prettier 2.0
 $ prettier test.cjs
 "use strict";
 console.log("Hello, World!");
